basic startup examples

--- a/app/Client/Hello.hbs
+++ b/app/Client/Hello.hbs
@@ -1,1 +1,3 @@
-<i> Partial {{name}}!! </i>
+<i> It's is a partial Hello!! </i>
+{{! this is a not renderabl comment }}
+<p>using the name property: {{name}}</p>
