--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -1,3 +1,27 @@
 html {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    border: 0;
     background-color: whitesmoke;
+}
+
+header {
+    width: 100%;
+    height: 2rem;
+    background-color: silver;
+    display: block;
+}
+
+main {
+    max-width: 500px;
+    width: 100%;
+    position: relative;
+    display: block;
+    margin: auto;
 }
